GUI becomes defunct in certain screen layouts #36652

Closed
opened 2013-09-03 20:25:26 +02:00 by Roman K · 13 comments

Relates to: #36175

%%%--- Operating System, Graphics card ---

  CPU: AMD Phenom II X4 955
  RAM: 4096 MB
  GFX: ATI Radeon HD 5700
  OS: Windows 7
  Drivers: Catalyst 13.1
- Blender version with error, and version that worked ---

with error: version 2.68 (sub 0), revision b'58537'. b'Release'

- Short description of error ---

A screen/layout becomes corrupt, so that selecting that screen removes all GUI functionality. Blender appears to be crashed, and dragging the window leaves window repaint artifacts/patterns. However, keyboard shortcuts to switch layouts restore normal functionality. Returning to the corrupt layout reliably reproduces the problem.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

I think I've nailed when that happens and here are the steps for reproducing this defect:

  1. Run Blender
  2. Shift+drag the 3D viewport to duplicate it into a new window
  3. Move that window to the second monitor
  4. Switch it to UV Image Viewer
  5. Minimize it
  6. Save the file
  7. Reload the file
  8. The new screen layout created for that duplicated window is now defunct. The window is initially black and stays that way. You can switch it to a working screen layout using the keyboard shortcuts.

I've linked the original bug as related to this report since it's been closed for not having the exact steps to reproduce it.%%%

**Relates to**: #36175 %%%--- Operating System, Graphics card --- ``` CPU: AMD Phenom II X4 955 RAM: 4096 MB GFX: ATI Radeon HD 5700 OS: Windows 7 Drivers: Catalyst 13.1 ``` - Blender version with error, and version that worked --- with error: version 2.68 (sub 0), revision b'58537'. b'Release' - Short description of error --- A screen/layout becomes corrupt, so that selecting that screen removes all GUI functionality. Blender appears to be crashed, and dragging the window leaves window repaint artifacts/patterns. However, keyboard shortcuts to switch layouts restore normal functionality. Returning to the corrupt layout reliably reproduces the problem. - Steps for others to reproduce the error (preferably based on attached .blend file) --- I think I've nailed when that happens and here are the steps for reproducing this defect: 1) Run Blender 2) Shift+drag the 3D viewport to duplicate it into a new window 3) Move that window to the second monitor 4) Switch it to UV Image Viewer 5) Minimize it 6) Save the file 7) Reload the file 8) The new screen layout created for that duplicated window is now defunct. The window is initially black and stays that way. You can switch it to a working screen layout using the keyboard shortcuts. I've linked the original bug as related to this report since it's been closed for not having the exact steps to reproduce it.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

#38321 was marked as duplicate of this issue

#38321 was marked as duplicate of this issue

%%%I also have this problem (Windows 7 64-bit, dual monitor) saving a file where one of the 2 windows is minimized will result that the interface of the minimized window is corrupted on re-opening (after restoring the window from the task bar).

I have found this to be un-repeatable and only have this working with one file, I can possibly upload it if necessary. It is only with that specific file that blender remembers that the window is minimized, with new files it maximises them all on opening the file. %%%

%%%I also have this problem (Windows 7 64-bit, dual monitor) saving a file where one of the 2 windows is minimized will result that the interface of the minimized window is corrupted on re-opening (after restoring the window from the task bar). I have found this to be un-repeatable and only have this working with one file, I can possibly upload it if necessary. It is only with that specific file that blender remembers that the window is minimized, with new files it maximises them all on opening the file. %%%
Member

%%%There is no need to move the window to a new monitor. Just having a second window minimized while saving the .blend, then subsequently opening it with 'Load UI' enabled, even in a fresh Blender instance, this happens.%%%

%%%There is no need to move the window to a new monitor. Just having a second window minimized while saving the .blend, then subsequently opening it with 'Load UI' enabled, even in a fresh Blender instance, this happens.%%%

Added subscriber: @Traverso

Added subscriber: @Traverso

◀ Merged tasks: #38321.

◀ Merged tasks: #38321.

Added subscribers: @brecht, @Sergey

Added subscribers: @brecht, @Sergey

@brecht, any idea who handles this?

@brecht, any idea who handles this?
Brecht Van Lommel self-assigned this 2014-02-17 12:50:54 +01:00

I'll give it a shot.

I'll give it a shot.

This issue was referenced by blender/blender-addons-contrib@0e492ac482

This issue was referenced by blender/blender-addons-contrib@0e492ac482a829734d0b3b257a373e141e375ecc

This issue was referenced by 0e492ac482

This issue was referenced by 0e492ac482a829734d0b3b257a373e141e375ecc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 0e492ac482.

Closed by commit 0e492ac482.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36652
No description provided.