Fix T36652: .blend file with minimized window not loading correctly on Windows.